--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-countup": "^4.3.3",
     "react-cx": "^0.1.12",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "typeface-roboto": "0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
